src/objects/QPMS__EmailDetails__c.object
<CustomObject>
    <description>Capture email trail received through email service.</description>
    <fields>
        <fullName>QPMS__Action_Plan_s_Effective__c</fullName>
        <label>Action Plan(s) Effective?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Not Effective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Add_Effectiveness_verificiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Effectiveness verificiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__AdhocTask_Title__c</fullName>
        <description>AdhocTask Title to display tasks</description>
        <label>AdhocTask Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <description>Adhoc Task sequence numbers</description>
        <label>Adhoc Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>EmailDetails</relationshipLabel>
        <relationshipName>EmailDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Response_Data__c</fullName>
        <label>Email Response Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Response__c</fullName>
        <label>Email Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_ccAddress__c</fullName>
        <label>Email ccAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_fromAddress__c</fullName>
        <label>Email fromAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_toAddress__c</fullName>
        <label>Email toAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>EmailDetails</relationshipLabel>
        <relationshipName>EmailDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EmailDetails</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>EmailDetails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EmailDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>